Fix css broken on merge

--- a/source/Styles.css
+++ b/source/Styles.css
@@ -16,7 +16,7 @@ body {
 h1 {
   text-align: center;
   font-family: "Rubik Wet Paint", cursive;
-  font-size: 7vmin;
+  font-size: 2rem;
 }
 
 form {
